fix: banner overflow and service header

--- a/styles/blog.module.scss
+++ b/styles/blog.module.scss
@@ -93,6 +93,7 @@
 .banner {
   height: 640px;
   padding: 3% 0;
+  overflow: hidden;
 
   .container {
     display: flex;
